--- a/configs/train_waymo.yaml
+++ b/configs/train_waymo.yaml
@@ -6,6 +6,7 @@ MODEL:
         OUT_CHANNELS: [512,1024,2048,512, 256, 128]     #[128, 256, 512, 512, 256, 128]
         INPUT_CHANNELS: 3
         DEPTH: 50
+        DROP_BLOCK: False
 INPUT:
     IMAGE_SIZE: 300
 DATASETS:
@@ -18,5 +19,5 @@ SOLVER:
     GAMMA: 0.1
     BATCH_SIZE: 32
     LR: 1.e-2
-OUTPUT_DIR: 'outputs/res50_new_waymo_sgd_1e_f2_drop_out'  
+OUTPUT_DIR: 'outputs/res50_new_waymo_sgd_1e_f2_new_aug'  
 DATASET_DIR: "datasets"
