--- a/configs/train_waymo.yaml
+++ b/configs/train_waymo.yaml
@@ -12,6 +12,7 @@ INPUT:
 DATASETS:
     TRAIN: ("waymo_train",)
     TEST: ("waymo_val", )
+    AUG_POLIC: 'v0'
 SOLVER:
     CHOICE: 'SGD'
     MAX_ITER:  53000
@@ -19,5 +20,5 @@ SOLVER:
     GAMMA: 0.1
     BATCH_SIZE: 32
     LR: 1.e-2
-OUTPUT_DIR: 'outputs/res50_new_waymo_sgd_1e_f2_new_aug'  
+OUTPUT_DIR: 'outputs/res50_new_waymo_sgd_1e_f2_aug_policy_v0'  
 DATASET_DIR: "datasets"
