--- a/configs/train_waymo.yaml
+++ b/configs/train_waymo.yaml
@@ -12,11 +12,13 @@ INPUT:
 DATASETS:
     TRAIN: ("waymo_train",)
     TEST: ("waymo_val", )
-    AUG_POLIC: 'v0'
+    AUG_POLICY: 'v0'
+DATA_LOADER:
+    NUM_WORKERS: 8
 SOLVER:
     CHOICE: 'SGD'
     MAX_ITER:  53000
-    LR_STEPS: [20000, 400000]
+    LR_STEPS: [20000, 40000]
     GAMMA: 0.1
     BATCH_SIZE: 32
     LR: 1.e-2
