--- a/configs/train_waymo_Copy1.yaml
+++ b/configs/train_waymo_Copy1.yaml
@@ -10,6 +10,8 @@ MODEL:
     PRIORS:
         FEATURE_MAPS: [[30,40], [15,20], [8,10], [4,5], [2,3], [1,1]]
         STRIDES: [[8,8], [16,16], [30,32], [60,64], [120,106], [240,320]]
+        MIN_SIZES: [[24,32], [48,64], [89,119], [130,173], [171,228], [212,282]]
+        MAX_SIZES: [[48,64], [89,119], [130,173], [171,228], [212,282], [252,336]]
 INPUT:
     IMAGE_SIZE: [240,320]  #[H,W]
 DATASETS:
@@ -20,10 +22,10 @@ DATA_LOADER:
     NUM_WORKERS: 8
 SOLVER:
     CHOICE: 'SGD'
-    MAX_ITER:  53000
-    LR_STEPS: [20000, 40000]
+    MAX_ITER:  50000
+    LR_STEPS: [40000, 45000]
     GAMMA: 0.1
     BATCH_SIZE: 32
     LR: 1.e-2
-OUTPUT_DIR: 'outputs/Res34_15_Apr/waymo_sgd_1e_f2_DB'  
+OUTPUT_DIR: 'outputs/Res34_16_Apr/waymo_sgd_1e_f2_DB'  
 DATASET_DIR: "datasets"
