--- a/configs/train_waymo_Copy1.yaml
+++ b/configs/train_waymo_Copy1.yaml
@@ -6,12 +6,14 @@ MODEL:
         OUT_CHANNELS: [128, 256, 512, 512, 256, 128]  #[512,1024,2048,512, 256, 128]    
         INPUT_CHANNELS: 3
         DEPTH: 34
-        DROP_BLOCK: True
+        DROP_BLOCK: False
     PRIORS:
         FEATURE_MAPS: [[30,40], [15,20], [8,10], [4,5], [2,3], [1,1]]
         STRIDES: [[8,8], [16,16], [30,32], [60,64], [120,106], [240,320]]
-        MIN_SIZES: [[24,32], [48,64], [89,119], [130,173], [171,228], [212,282]]
-        MAX_SIZES: [[48,64], [89,119], [130,173], [171,228], [212,282], [252,336]]
+        MIN_SIZES: [[17,23], [36,48], [80,106], [123,164], [166,221], [208,278]]
+        MAX_SIZES: [[36,48], [80,106], [123,164], [166,221], [208,278], [252,336]]
+        ASPECT_RATIOS: [[2], [2,3], [2, 3], [2, 3], [2], [2]]
+        BOXES_PER_LOCATION: [4, 6, 6, 6, 4, 4]
 INPUT:
     IMAGE_SIZE: [240,320]  #[H,W]
 DATASETS:
@@ -27,5 +29,5 @@ SOLVER:
     GAMMA: 0.1
     BATCH_SIZE: 32
     LR: 1.e-2
-OUTPUT_DIR: 'outputs/Res34_16_Apr/waymo_sgd_1e_f2_DB'  
+OUTPUT_DIR: 'outputs/Res34_16_Apr/waymo_sgd_1e_f2_New_backbone'  
 DATASET_DIR: "datasets"
